shellfirm/tests/snapshots/checks__kubernetes-strict-delete_resource.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-delete_resource.yaml",
        test: "k delete -n test",
        check_detection_ids: [
            "kubernetes-strict:delete_resource",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-delete_resource.yaml",
        test: "kubectl   delete   -n     test",
        check_detection_ids: [
            "kubernetes-strict:delete_resource",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-delete_resource.yaml",
        test: "ka delete -n test",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
