shellfirm/tests/snapshots/checks__kubernetes-strict-rollout_resource.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-rollout_resource.yaml",
        test: "kubectl rollout restart",
        check_detection_ids: [
            "kubernetes-strict:rollout_resource",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-rollout_resource.yaml",
        test: "kubectl rollout resume",
        check_detection_ids: [
            "kubernetes-strict:rollout_resource",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-rollout_resource.yaml",
        test: "kubectl rollout pause",
        check_detection_ids: [
            "kubernetes-strict:rollout_resource",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-rollout_resource.yaml",
        test: "kubectl   rollout   undo",
        check_detection_ids: [
            "kubernetes-strict:rollout_resource",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-rollout_resource.yaml",
        test: "kubectl rollout s",
        check_detection_ids: [],
        test_description: "invalid command",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-rollout_resource.yaml",
        test: "kubectl rollout",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
