shellfirm/tests/snapshots/checks__missing_patterns_coverage.snap
---
source: shellfirm/tests/checks.rs
expression: not_covered
snapshot_kind: text
---
[
    "network:flush_iptables",
    "network:delete_custom_chains",
    "network:flush_nat_rules",
    "network:disable_firewall",
    "network:force_reset_firewall",
    "network:stop_networking",
    "network:stop_network_manager",
    "network:bring_down_interface",
    "network:bring_down_interface_ip",
    "network:delete_default_route",
]
