shellfirm/tests/snapshots/checks__network-delete-custom-chains.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "network-delete-custom-chains.yaml",
        test: "iptables -X",
        check_detection_ids: [
            "network:delete_custom_chains",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "network-delete-custom-chains.yaml",
        test: "sudo iptables -X",
        check_detection_ids: [
            "network:delete_custom_chains",
        ],
        test_description: "match command with sudo",
    },
    TestSensitivePatternsResult {
        file_path: "network-delete-custom-chains.yaml",
        test: "iptables -X CUSTOM_CHAIN",
        check_detection_ids: [
            "network:delete_custom_chains",
        ],
        test_description: "should not match specific chain",
    },
    TestSensitivePatternsResult {
        file_path: "network-delete-custom-chains.yaml",
        test: "iptables -L",
        check_detection_ids: [],
        test_description: "should not match list command",
    },
]
