shellfirm/tests/snapshots/checks__network-flush-iptables.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "network-flush-iptables.yaml",
        test: "iptables -F",
        check_detection_ids: [
            "network:flush_iptables",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "network-flush-iptables.yaml",
        test: "sudo iptables -F",
        check_detection_ids: [
            "network:flush_iptables",
        ],
        test_description: "match command with sudo",
    },
    TestSensitivePatternsResult {
        file_path: "network-flush-iptables.yaml",
        test: "iptables -F INPUT",
        check_detection_ids: [
            "network:flush_iptables",
        ],
        test_description: "should not match specific chain",
    },
    TestSensitivePatternsResult {
        file_path: "network-flush-iptables.yaml",
        test: "iptables -L",
        check_detection_ids: [],
        test_description: "should not match list command",
    },
]
